--- a/views/show.ejs
+++ b/views/show.ejs
@@ -18,8 +18,11 @@
     <h1>Pokedex</h1>
     <h2> <%= pokemonname %></h2> 
     <br>
-    <img src='<%= pokemonimage %>' alt=“image” />
-   <h3><%= pokemonlist %> </h3>
+  
+   
+    
+    <img src='<%=allpokemon[i].img %>' alt =“” name='<%=allpokemon[i].name %>' type='<%=allpokemon[i].type %>'
+   <h3><%= pokemontype %> </h3>
     
 
     
