--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,14 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     
     <h1> Pokedex Entry-Bulbasaur</h1>
     <form action="/Pokemon/<%=i%>?_method=PUT" method="POST">
-        <input type="number"required name="id" value="<%=pokemonid %>"><input type="text"placeholder="text"required name="name" value="<%=pokemonname %>"><input type="text"required name="type" value="<%=pokemontype %>">
-        <input type="url"required name="img" value="<%=pokemonimg %>">
+        <input type="number"required name="id" value="<%=pokemonid %>">
+        <input type="text"placeholder="text"required name="name" value="<%=pokemonname %>">
+        <input type="text"required name="type" value="<%=pokemontype %>"><br><br>
+        <input type="url"required name="img" value="<%=pokemonimg %>"><br><br>
+       
         <button type=“submit”>Edit Pokemon </button>
         </form>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
