--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,12 +14,14 @@
   
         }
       </style>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
+  <center>
     <h1>Pokedex</h1>
 
-    <button><a href="/pokemons/new">Add New Pokemon</a></button>
-  
+    <button class="btn btn-primary"><a style="color:aliceblue"href="/pokemons/new">Add New Pokemon</a></button><br>
+<br><br>
 
         <% for(let i = 0; i < allpokemon.length; i++) { %>
             
@@ -27,7 +29,8 @@
             
         <% } %>
   
-
-    
+      </center>
+  
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
