--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
     
     <h1> Pokedex Entry-Bulbasaur</h1>
    
     <form action="/pokemon" method="POST">
-        <input type="number"required name="id"><input type="text"placeholder="text"required name="name"><input type="text"required name="type">
-        <input type="url"required name="img">
-        <button type=“submit”> Add New Pokemon </button>
+        <input type="number"placeholder="pokemonid"required name="id">
+        <input type="text"placeholder="pokemonname"required name="name"><br><br>
+        <input type="text"placeholder="pokemontype"required name="type">
+        <input type="url"placeholder="pokemonurl"required name="img"><br><br>
         
+        <button class="btn btn-secondary" type=“submit”> Add New Pokemon </button><br><br>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>    
 </body>
 </html>
